--- a/.hintrc
+++ b/.hintrc
@@ -7,7 +7,9 @@
       "default",
       {
         "ignore": [
-          "width: fit-content"
+          "width: fit-content",
+          "max-height: fit-content",
+          "min-width: fit-content"
         ]
       }
     ]
